@@ -756,6 +756,7 @@ int main(int argc, char *argv[])
     screensaver_disabled = FALSE;
     update_control_flag = FALSE;
     gchar *filename;
+    skip_fixed_allocation = FALSE;
 
     sa.sa_handler = hup_handler;
     sigemptyset(&sa.sa_mask);
